--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -31,3 +31,17 @@ body {
 .account-name {
   color: gray;
 }
+
+/* tweettextArea */
+.tweet-textarea {
+  font-size: 1em;
+  width: 100%;
+  height: 5em;
+  padding: 0.8em;
+  resize: vertical;
+}
+
+.send-tweet {
+  font-size: 1em;
+  padding: 0.5em 1em;
+}
